# perror

./: .gitignore  LICENSE  Makefile.am  README  configure.ac
doc/: Makefile.am  perror.1
src/: Makefile.am  perror.c
